<resources>
    <string name="app_name">GoParty</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_events">Events</string>
    <string name="title_joined">Joined</string>
    <string name="title_profile">Profile</string>
    <string name="str_date">Date:</string>
    <string name="str_location">Location:</string>
    <string name="description">Description:</string>
    <string name="organizer">Organizer</string>
    <string name="str_login">Login</string>
    <string name="str_create_account">Create an account</string>
    <string name="str_next">Next</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_photo">Add photo</string>
    <string name="add_event">Add event</string>
    <string name="empty_field">Empty field</string>
    <string name="add_event_success">Event added successfully</string>
    <string name="delete_event_success">Event deleted successfully</string>
    <string name="page">Page</string>
    <string name="no_social">No social network added</string>
    <string name="sub_issued">Subscription issued</string>
    <string name="sub_canceled">Subscription canceled</string>
    <string name="join_event">Join event</string>
    <string name="leave_event">Leave event</string>
</resources>
